# sonai

./: Cargo.toml  README.md  rebuild.nu
inference-wasm-web/: index.html  package.json
inference-wasm-web/src/: main.ts
inference-wasm-web/src/pkg/: sonai.js  sonai_bg.js  sonai_bg.wasm  sonai_bg.wasm.d.ts
sonai/: Cargo.toml  model.kmeans  model.scaler
sonai-metrics/: Cargo.toml
sonai-metrics/src/: lib.rs
sonai-metrics/src/lists/: backstory.rs  broken_english.rs  buzzword.rs  devlog.rs  incorrect_perspective.rs  negative_backstory.rs  negative_buzzword.rs  not_just.rs
sonai/src/: lib.rs
training-bin/: Cargo.toml  ftwn.data
training-bin/src/: flavortown.rs  main.rs  network.rs
training-bin/src/flavortown/: sources.rs
