[workspace]
resolver = "3"
members = [
  "training-bin",
  "sonai",
  "sonai-metrics",
]

[workspace.dependencies]
linfa = { version = "0.8.1", default-features = false }
linfa-clustering = { version = "0.8.1", features = ["serde"] }
linfa-nn = "0.8.1"
ndarray = { version = "0.16.1", default-features = false }

bincode = { version = "2.0.1", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }

sonai_metrics = "0.3.1"

[patch.crates-io]
sonai_metrics = { path = "./sonai-metrics" }

# [profile.release]
# lto = true
# opt-level = 3
# codegen-units = 1
# strip = true
# panic = "abort"
