[package]
name = "sonai_metrics"
license = "MIT OR Apache-2.0"
description = "Text metrics for sonai"
version = "0.3.1"
edition = "2024"

[dependencies]
linfa-clustering = { workspace = true }
linfa-nn = { workspace = true }
ndarray = { workspace = true }

emojis = "0.8.0"
pulldown-cmark = { version = "0.13.0", default-features = false }
unicode-segmentation = "1.12.0"
serde = { workspace = true }
aho-corasick = "1.1.3"

[lib]
crate-type = ["cdylib", "rlib"]
