[package]
name = "sonai"
version = "0.5.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Generic AI Text Detection for rust"

[dependencies]
# Actual inference
linfa = { workspace = true }
linfa-clustering = { workspace = true }
linfa-preprocessing = { workspace = true }
linfa-nn = { workspace = true }
ndarray = { workspace = true }

sonai_metrics = { workspace = true }

# Model loading
serde = { workspace = true }
bincode = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.16", features = ["js"] }
wasm-bindgen = "=0.2.105"
serde-wasm-bindgen = "0.6.5"

[lib]
crate-type = ["cdylib", "rlib"]
