[package]
license = "MIT OR Apache-2.0"
name = "training"
version = "0.2.0"
edition = "2024"

[dependencies]
sonai_metrics = { workspace = true }

linfa = { workspace = true }
linfa-preprocessing = { workspace = true }
linfa-clustering = { workspace = true }
linfa-nn = { workspace = true }
ndarray = { workspace = true }

bincode = { workspace = true }
serde = { workspace = true }

colored = "3.0.0" # Cluster display
rand = "0.9.2"

anyhow = "1.0.98"
dotenvy = { git = "https://github.com/allan2/dotenvy", branch = "main" }

# Embedding seems to degrade perf of model
# embed_anything = { version = "0.6.4", features = ["cuda"] }
# rand = "0.9.2"

reqwest = { version = "0.12.22", features = ["http2", "json", "rustls-tls"], default-features = false }
tokio = { version = "1.46.1", features = ["full"] }
futures = "0.3.31"
rand_xoshiro = "0.6.0"
time = { version = "0.3.41", features = ["formatting"] }
num-format = "0.4.4"
httpdate = "1.0.3"
